// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process custom text to array 3 normal words 1`] = `
Array [
  "hello",
  "bye",
  "ffff",
]
`;

exports[`process custom text to array empty string 1`] = `Array []`;

exports[`process custom text to array empty string with spaces 1`] = `Array []`;

exports[`process custom text to array line breaks 1`] = `
Array [
  "hello",
  "bye",
  "line",
  "breaks",
]
`;

exports[`process custom text to array padding text 1`] = `
Array [
  "hello",
  "hello",
]
`;

exports[`process custom text to array single letter word 1`] = `
Array [
  "hello",
  ".",
  "hello",
]
`;
